apps/media/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab-worker1
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [44, 104]
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:12.1
          ports:
            - containerPort: 8096
              name: http
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-media
              mountPath: /media
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /mnt/sata-storage/HDD2-share/jellyfin
            type: DirectoryOrCreate
        - name: jellyfin-media
          hostPath:
            path: /mnt/sata-storage/HDD2-share/jellyfin
            type: Directory
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.4.4
          ports:
            - containerPort: 7878
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: radarr
            - name: download-pool
              mountPath: /downloads
            - name: movie-library
              mountPath: /media/movies
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
        - name: download-pool
          hostPath:
            path: /mnt/HDD2/media-stack/downloads
            type: DirectoryOrCreate
        - name: movie-library
          hostPath:
            path: /mnt/HDD2/jellyfin/movies
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20-develop
          ports:
            - containerPort: 8989
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: sonarr
            - name: download-pool
              mountPath: /downloads
            - name: tv-library
              mountPath: /media/series
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
        - name: download-pool
          hostPath:
            path: /mnt/HDD2/media-stack/downloads
            type: DirectoryOrCreate
        - name: tv-library
          hostPath:
            path: /mnt/HDD2/jellyfin/series
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: jellyseerr
          image: seerr/seerr:v3.5.0
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5055
              name: http
          volumeMounts:
            - name: app-config
              mountPath: /app/config
              subPath: seerr
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.6.2
          ports:
            - containerPort: 6767
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: bazarr
            - name: movie-library
              mountPath: /media/movies
            - name: tv-library
              mountPath: /media/series
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
        - name: movie-library
          hostPath:
            path: /mnt/HDD2/jellyfin/movies
            type: Directory
        - name: tv-library
          hostPath:
            path: /mnt/HDD2/jellyfin/series
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab-worker1
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:20.04.1
          ports:
            - containerPort: 8080
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: qbittorrent
            - name: download-pool
              mountPath: /downloads
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/sata-storage/HDD2-share/media-stack
            type: Directory
        - name: download-pool
          hostPath:
            path: /mnt/sata-storage/HDD2-share/media-stack/downloads
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: prowlarr
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
