apps/media/arr-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: radarr
            - name: download-pool
              mountPath: /downloads
            - name: movie-library
              mountPath: /media/movies
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
        - name: download-pool
          hostPath:
            path: /mnt/HDD2/media-stack/downloads
            type: DirectoryOrCreate
        - name: movie-library
          hostPath:
            path: /mnt/HDD2/jellyfin/movies
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: sonarr
            - name: download-pool
              mountPath: /downloads
            - name: tv-library
              mountPath: /media/series
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
        - name: download-pool
          hostPath:
            path: /mnt/HDD2/media-stack/downloads
            type: DirectoryOrCreate
        - name: tv-library
          hostPath:
            path: /mnt/HDD2/jellyfin/series
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
              name: http
          volumeMounts:
            - name: app-config
              mountPath: /app/config
              subPath: seerr
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
              name: webui
          volumeMounts:
            - name: app-config
              mountPath: /config
              subPath: bazarr            # Uses your existing media-stack/bazarr folder
            - name: movie-library
              mountPath: /media/movies  # Let Bazarr find movie directories
            - name: tv-library
              mountPath: /media/series  # Let Bazarr find tv directories
      volumes:
        - name: app-config
          hostPath:
            path: /mnt/HDD2/media-stack
            type: Directory
        - name: movie-library
          hostPath:
            path: /mnt/HDD2/jellyfin/movies
            type: Directory
        - name: tv-library
          hostPath:
            path: /mnt/HDD2/jellyfin/series
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 7878
      targetPort: 7878
  selector:
    app: radarr
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 8989
      targetPort: 8989
  selector:
    app: sonarr
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 5055
      targetPort: 5055
  selector:
    app: jellyseerr
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 6767
      targetPort: 6767
  selector:
    app: bazarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arr-ingress
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-svc
                port:
                  number: 7878
    - host: sonarr.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-svc
                port:
                  number: 8989
    - host: seerr.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr-svc
                port:
                  number: 5055
    - host: bazarr.zieqs.online           # Added Bazarr ingress route here
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-svc
                port:
                  number: 6767
