apps/media/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab-worker1  # <-- Target the worker node
      securityContext:
        supplementalGroups: [44, 104]
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          ports:
            - containerPort: 8096
              name: http
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-media
              mountPath: /media
            - name: dri # <-- Mounts the GPU interface into the container runtime
              mountPath: /dev/dri
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /mnt/sata-storage/HDD2-share/jellyfin      # <-- Pointing to NFS mount
            type: DirectoryOrCreate
        - name: jellyfin-media
          hostPath:
            path: /mnt/sata-storage/HDD2-share/jellyfin      # <-- Pointing to NFS mount
            type: Directory
        - name: dri
          hostPath:
            path: /dev/dri                                    # <-- Exposes physical host GPU to Kubernetes
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-svc
                port:
                  number: 8096
